GN: Don't define argument overrides globally

Previously, argument overrides (set via "gn args" or toolchain_args()) were
global, even though their default values (set inside declare_args()) were set
locally and thus only available to the file that set them, plus any file that
imported it.

Now, argument overrides are always applied locally, at the end of the
declare_args() block. This ensures that argument defaults and overrides
behave in the same way.

BUG=619963

Review-Url: https://codereview.chromium.org/2092623002
Cr-Commit-Position: refs/heads/master@{#404746}

Former-commit-id: 5662a8082448584fd3d77f0dba03759b2163e8e5